--- a/about.css
+++ b/about.css
@@ -6,15 +6,8 @@
 
 /* navbar */
 
-.nav{
-    display: flex;
-    background-color: #f2d2bd;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0% 4%;
-}
 .logo img{
-   height: 120px;
+    height: 120px;
     border-radius: 100%;
 }
 .logo img:hover{
@@ -72,13 +65,57 @@
     box-shadow: 0 0 12px #b7410e;
 }
 
+
+/* HAMBURGER */
+
+li{
+    list-style: none;
+  }
+  a{
+    color: #b7410e;
+    text-decoration: none;
+  }
+  header{
+    background-color: #f2d2bd;
+  }
+  .container{
+    max-width: 1224px;
+    width: 90%;
+    margin: 0 auto;
+  }
+  .navbar{
+    min-height: 70px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .nav-menu{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 8px;
+  }
+  .hamburger{
+    display: none;
+    cursor: pointer;
+  }
+  .bar{
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+    background-color: #b7410e;
+  }
+
 /* About Us */
 
 .about{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0% 6%;
+    padding: 2% 6%;
 }
 .aimg{
     width: 50%;
@@ -101,7 +138,6 @@
     color: #b7410e;
     font-size: 2vh;
     font-family: 'Poppins',sans-serif;
-    width: 80%;
 }
 .atext button{
     margin-top: 20px;
@@ -114,7 +150,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0% 6%;
+    padding: 2% 6%;
     background-color: #f2d2bd;
 }
 .usimg{
@@ -140,7 +176,6 @@
     color: #b7410e;
     font-size: 2vh;
     font-family: 'Poppins',sans-serif;
-    width: 80%;
 }
 .ustext button{
     margin-top: 20px;
@@ -231,15 +266,34 @@
 
 @media (max-width: 900px) {
     
-    /* navbar */
+    /* Hamburger */
 
-    .nav{
-        display: flex;
+    .hamburger{
+        display: block;
+      }
+     .hamburger.active .bar:nth-child(2){
+        opacity: 0;
+      }
+     .hamburger.active .bar:nth-child(1){
+        transform: translateY(8px) rotate(45deg);
+      }
+     .hamburger.active .bar:nth-child(3){
+        transform: translateY(-8px) rotate(-45deg);
+      }
+     .nav-menu{
+        position: fixed;
+        left: -100%;
+        top: 8px;
+        gap: 0;
         flex-direction: column;
-    }
-    .links{
-        display: none;
-    }
+        background-color: #f2d2bd;
+        width: 100%;
+        text-align: center;
+        transition: 0.3s;
+      }
+     .nav-menu.active{
+        left: 0;
+      }
 
       /* about us */
 
