--- a/sign.css
+++ b/sign.css
@@ -6,13 +6,6 @@
 
 /* navbar */
 
-.nav{
-    display: flex;
-    background-color: #f2d2bd;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0% 4%;
-}
 .logo img{
     height: 120px;
     border-radius: 100%;
@@ -71,6 +64,50 @@
     background-color: #f2d2bd;
     box-shadow: 0 0 12px #b7410e;
 }
+
+
+/* HAMBURGER */
+
+li{
+    list-style: none;
+  }
+  a{
+    color: #b7410e;
+    text-decoration: none;
+  }
+  header{
+    background-color: #f2d2bd;
+  }
+  .container{
+    max-width: 1224px;
+    width: 90%;
+    margin: 0 auto;
+  }
+  .navbar{
+    min-height: 70px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .nav-menu{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 8px;
+  }
+  .hamburger{
+    display: none;
+    cursor: pointer;
+  }
+  .bar{
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+    background-color: #b7410e;
+  }
 
 /* panel */
 
@@ -236,15 +273,34 @@ input{
 
 @media (max-width: 900px) {
     
-    /* navbar */
+    /* Hamburger */
 
-    .nav{
-        display: flex;
+    .hamburger{
+        display: block;
+      }
+     .hamburger.active .bar:nth-child(2){
+        opacity: 0;
+      }
+     .hamburger.active .bar:nth-child(1){
+        transform: translateY(8px) rotate(45deg);
+      }
+     .hamburger.active .bar:nth-child(3){
+        transform: translateY(-8px) rotate(-45deg);
+      }
+     .nav-menu{
+        position: fixed;
+        left: -100%;
+        top: 8px;
+        gap: 0;
         flex-direction: column;
-    }
-    .links{
-        display: none;
-    }
+        background-color: #f2d2bd;
+        width: 100%;
+        text-align: center;
+        transition: 0.3s;
+      }
+     .nav-menu.active{
+        left: 0;
+      }
 
     /* sign */
 
@@ -277,7 +333,6 @@ input{
         margin-bottom: 0px;
         padding: 0 auto;
         line-height: 18px;
-        width: 80%;
     }
     .footer-logo img{
         width: 30vw;
