--- a/style.css
+++ b/style.css
@@ -6,13 +6,6 @@
 
 /* navbar */
 
-.nav{
-    display: flex;
-    background-color: #f2d2bd;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0% 4%;
-}
 .logo img{
     height: 120px;
     border-radius: 100%;
@@ -72,12 +65,55 @@
     box-shadow: 0 0 12px #b7410e;
 }
 
+
+/* HAMBURGER */
+
+li{
+    list-style: none;
+  }
+  a{
+    color: #b7410e;
+    text-decoration: none;
+  }
+  header{
+    background-color: #f2d2bd;
+  }
+  .container{
+    max-width: 1224px;
+    width: 90%;
+    margin: 0 auto;
+  }
+  .navbar{
+    min-height: 70px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .nav-menu{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 8px;
+  }
+  .hamburger{
+    display: none;
+    cursor: pointer;
+  }
+  .bar{
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+    background-color: #b7410e;
+  }
+
 /* Header */
 
 .header{
     display: flex;
     align-items: center;
-    /* justify-content: space-between; */
     background-color: #f2d2bd;
     padding: 0% 6%;
 }
@@ -114,7 +150,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0% 6%;
+    padding: 2% 6%;
 }
 .aimg{
     width: 50%;
@@ -236,24 +272,6 @@
     text-align: right;
     padding: 20px;
 }
-.news .cards{
-    justify-content: space-around;
-}
-.news .cards .card{
-    background-color: #f2d2bd;
-}
-.news .cards .card h4{
-    color: #b7410e;
-}
-.news .cards .card button{
-    border: 2px solid #b7410e;
-    width: fit-content;
-}
-.news .cards .card img{
-    width: 12vw;
-    border-radius: 40px;
-    margin: 12px 0;
-}
 
 
 /* News & events */
@@ -267,6 +285,22 @@
     font-size: 6vh;
     font-family: 'Poppins',sans-serif;
     padding: 20px;
+}
+.news .cards .card{
+    background-color: #f2d2bd;
+    margin: 0 45px;
+}
+.news .cards .card h4{
+    color: #b7410e;
+}
+.news .cards .card button{
+    border: 2px solid #b7410e;
+    width: fit-content;
+}
+.news .cards .card img{
+    width: 12vw;
+    border-radius: 40px;
+    margin: 12px 0;
 }
 
 /* Footer */
@@ -298,7 +332,6 @@
     font-family: 'Poppins',sans-serif;
     color: #b7410e;
     margin-bottom: 20px;
-    width: 80%;
 }
 .footer-logo p{
     font-family: 'Poppins',sans-serif;
@@ -352,16 +385,35 @@
 /* Responsiveness */
 
 @media (max-width: 900px) {
-    
-    /* navbar */
 
-    .nav{
-        display: flex;
+    /* Hamburger */
+
+    .hamburger{
+        display: block;
+      }
+     .hamburger.active .bar:nth-child(2){
+        opacity: 0;
+      }
+     .hamburger.active .bar:nth-child(1){
+        transform: translateY(8px) rotate(45deg);
+      }
+     .hamburger.active .bar:nth-child(3){
+        transform: translateY(-8px) rotate(-45deg);
+      }
+     .nav-menu{
+        position: fixed;
+        left: -100%;
+        top: 8px;
+        gap: 0;
         flex-direction: column;
-    }
-    .links{
-        display: none;
-    }
+        background-color: #f2d2bd;
+        width: 100%;
+        text-align: center;
+        transition: 0.3s;
+      }
+     .nav-menu.active{
+        left: 0;
+      }
 
     /* header */
 
